--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,7 +14,7 @@
     <!-- This footer should hidden by default and shown when there are todos -->
     <footer class="footer" [hidden]="todos.length === 0">
         <!-- This should be `0 items left` by default -->
-        <span class="todo-count"><strong>0</strong> item left</span>
+        <span class="todo-count"><strong>{{countUncompletedTodo()}}</strong> item<span [hidden]="countUncompletedTodo() < 2">s</span> left</span>
         <!-- Remove this if you don't implement routing -->
         <ul class="filters">
             <li>
